--- a/install/install-1.html
+++ b/install/install-1.html
@@ -103,7 +103,7 @@
       </div>
       <div class="install-btn">
         <!--<p>后退<span class="left-btn"></span></p>-->
-        <p class="selected" onclick="document.getElementById('checkbox').checked ?window.location.href='index.php?step=2' : alert('您必须同意软件许可协议才能安装！');">继续<span class="right-btn"></span></p>
+        <p class="selected" onclick="document.getElementById('checkbox').checked ?window.location.href='/install/index.php?step=2' : alert('您必须同意软件许可协议才能安装！');">继续<span class="right-btn"></span></p>
       </div>
     </div>
   </div>
